Missing border on quizlet.com (or rather: box-shadow not showing up, with 3D transforms)
Categories
(Core :: Layout: Scrolling and Overflow, defect, P3)
Tracking
()
People
(Reporter: bgstandaert, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.13; rv:67.0) Gecko/20100101 Firefox/67.0
Steps to reproduce:
- Visit https://quizlet.com/42221231/flashcards.
- Click on the star icon in the upper-right corner of the card.
Actual results:
The star changes color, but no border appears around the card until the window is resized or the card is clicked.
Expected results:
A yellow border should appear around the card as soon as the star icon is clicked.
Mozregression says this is a regression from 2017: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b772e0f4138540113e91a46c99bb0d14ecc8acca&tochange=25a94c1047e793ef096d8556fa3c26dd72bd37d7, although I'm not sure if something about the site changed recently to cause this or not.
Hi reporter,
Thank you for taking the time to add this report.
I was able to reproduce the mentioned behavior on all the latest Firefox versions across OS-es ( Windows 10 / Ubuntu 18.04 and Mac OS 10.14).
I also verified the regression range, but unfortunately could not pinpoint the exact bug that might have caused this, other than the pushlog you provided above.
I am going to add this to Core: Layout: Images, Video and HTML Frames for an advised input. If this is not the proper component, please feel free to change it to a more appropriate one.
Comment 2•6 years ago
|
||
That effect is done adding a box-shadow. There's all sorts of 3d transforms involved. Can somebody verify that the bug doesn't repro with WebRender enabled (gfx.webrender.all), in nightly at least?
In that regression range, bug 1313753 is the only one that stands out.
Comment 3•6 years ago
|
||
Reducing it would be immensely helpful, if somebody has the time.
I verified it after enabling gfx.webrander.all but unfortunately I got the same behavior across FX versions.
Comment 5•6 years ago
|
||
You need a browser restart to make that pref change take effect.
I did not do that before. It does seem to work properly now after gfx.webrender.all enabling and browser restart.
Updated•6 years ago
|
Updated•6 years ago
|
| Reporter | ||
Comment 8•6 years ago
|
||
The testcase for this turned out to be pretty simple actually; it's an element with text inside an element with backface-visibility: hidden, which is inside a third element with preserve-3d. If you click the "add box-shadow" button, Firefox displays around 1px of the shadow on the bottom of the element only, whereas Chrome and Safari show a 3px shadow around the entire element.
I am also unable to reproduce this with webrender enabled.
Comment 9•6 years ago
|
||
AFAIK, :sinker is no longer active on Mozilla's project.
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 10•6 years ago
|
||
We don't store post-transform overflow areas for frames within preserve-3d, but we do store pre-transform overflow areas.
Rather than just recomputing the changed overflow for the root, we should recompute overflows for all ancestors up to the 3d root.
Comment 11•6 years ago
|
||
Bulk change of P3 carryover bugs to wontfix for 68.
Comment 12•6 years ago
|
||
Comment 13•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Description
•