Bug 1544995 - Always update overflow areas up to the preserve-3d root. r=dbaron

We don't store post-transform overflow areas for frames within preserve-3d, but we do store pre-transform overflow areas.
Rather than just recomputing the changed overflow for the root, we should recompute overflows for all ancestors up to the 3d root.

Differential Revision: https://phabricator.services.mozilla.com/D31213

--HG--
extra : moz-landing-system : lando